--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "antd": "^4.5.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
