--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@iconify/icons-cib": "^1.0.3",
     "@iconify/icons-logos": "^1.0.12",
+    "@iconify/icons-vscode-icons": "^1.0.2",
     "@iconify/react": "^1.1.3"
   }
 }
