added jquery icon and added all iconify icons to about me section

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "@iconify/icons-bx": "^1.0.3",
     "@iconify/icons-carbon": "^1.0.6",
     "@iconify/icons-cib": "^1.0.3",
     "@iconify/icons-fa-brands": "^1.0.14",
